fixed the text alignment of table cells. - The first cell is aligned left and the others are right.

--- a/static/style.css
+++ b/static/style.css
@@ -23,7 +23,14 @@ td {
   border-bottom: 1px solid #ccc;
   color: #669;
   padding: 6px 8px;
+}
+
+tbody td {
   text-align: right;
+}
+
+tbody td:first-child {
+  text-align: left;
 }
 
 tbody tr:hover td {
